tests/fails/f2.t
require("fail")
terra foo()
    foo()
end
foo()
